# match-model

./: poisson_calibrated_walk_forward_metrics.csv  poisson_dc_metrics.csv  poisson_mle_metrics.csv  poisson_walk_forward_metrics.csv  premier_2425_metrics.csv  premier_2425_predictions.csv  pyproject.toml  test_artifact.py  walk_forward_metrics.csv
artifacts/: multiclass_baseline.joblib  multiclass_baseline_scorer.joblib  premier_2425_poisson.joblib
data/: loaders.py  splits.py
evaluation/: metrics.py  walk_forward.py
models/: base.py  multiclass_baseline.py
schema/: columns.py  validation.py
src/match_model/cli/: evaluate.py  evaluate_league_regime.py  evaluate_poisson.py  evaluate_poisson_calibrated.py  export_artifact.py  export_poisson_regime_artifact.py  train.py  train_poisson.py
src/match_model/data/: loaders.py  splits.py
src/match_model/evaluation/: calibration.py  metrics.py  walk_forward.py
src/match_model/models/: base.py  multiclass_baseline.py  poisson_model.py
src/match_model/runtime/: artifact.py  build_poisson_artifact.py  scorer.py
src/match_model/schema/: validation.py
src/match_model/training/: promotion.py  regime.py  season_utils.py
